--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ Django==3.0.5
 django-cors-headers==3.2.1
 django-extensions==2.2.9
 django-filter==2.2.0
+django-sslserver==0.22
 djangorestframework==3.11.0
 Pillow==7.1.1
 PyMySQL==0.9.3
