--- a/app.yaml
+++ b/app.yaml
@@ -2,6 +2,9 @@ runtime: python37
 service: api
 entrypoint: gunicorn -b :8080 bookshelf_api.wsgi
 
+includes:
+  - secret.yaml
+
 handlers:
 - url: /static
   static_dir: static/
